// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateReleaseNotes should combine pr w/no label and labelled pr 1`] = `
"#### 🐛  Bug Fix
- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)
- Third  (adam@dierkens.com)

#### Authors: 1
- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for JIRA commits 1`] = `
"#### 💥  Breaking Change
- [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Some Feature [#12345](https://github.custom.com/foobar/auto-release/pull/12345) (adam@dierkens.com)

#### 🐛  Bug Fix
- Third  (adam@dierkens.com)

#### 🏠  Internal
- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1
- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for PR commits 1`] = `
"#### 🚀  Enhancement
- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1
- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for PR commits without labels 1`] = `
"#### 🐛  Bug Fix
- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1
- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for jira commits without labels 1`] = `
"#### 🐛  Bug Fix
- [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Fix P0  (adam@dierkens.com)

#### Authors: 1
- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create sections for packages 1`] = `
"#### 💥  Breaking Change
- woot [#12343](https://github.custom.com/foobar/auto-release/pull/12343) (adam@dierkens.com)
- \`foobar/release\`, \`foobar/party\`
  - [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Some Feature [#12345](https://github.custom.com/foobar/auto-release/pull/12345) (adam@dierkens.com)
  - [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Some Feature - Revert [#12345](https://github.custom.com/foobar/auto-release/pull/12345) (adam@dierkens.com)

#### 🏠  Internal
- \`foobar/release\`
  - Another Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1
- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should use username if present 1`] = `
"#### 🚀  Enhancement
- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) ([@adam](https://github.custom.com/adam))

#### Authors: 1
- Adam Dierkens ([@adam](https://github.custom.com/adam))"
`;

exports[`normalizeCommits should do nothing with normal commits 1`] = `
Array [
  Object {
    "author": Object {
      "email": "adam@dierkens.com",
      "name": "Adam Dierkens",
    },
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "comment": "First",
    "id": "foo",
    "labels": Array [],
    "packages": undefined,
  },
  Object {
    "author": Object {
      "email": "adam@dierkens.com",
      "name": "Adam Dierkens",
    },
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "comment": "Second",
    "id": "foo",
    "labels": Array [],
    "packages": undefined,
  },
  Object {
    "author": Object {
      "email": "adam@dierkens.com",
      "name": "Adam Dierkens",
    },
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "comment": "Third",
    "id": "foo",
    "labels": Array [],
    "packages": undefined,
  },
]
`;
